Update start.bat
Added restart if a crash accured and Aikar's Flags.